fix: fix misalignment of sticky movie

--- a/src/content-isolated/disable-sticky-movie/disable-sticky-movie.css
+++ b/src/content-isolated/disable-sticky-movie/disable-sticky-movie.css
@@ -1,3 +1,4 @@
 [aria-label="動画プレイヤーレイアウト"] {
   position: relative;
+  inset: 0;
 }
